--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,22 +1,243 @@
-@import './home';
-@import './slider';
-@import './extend';
-@import './variable';
-@import './navbar';
-@import './event';
-@import './tab';
-@import './resort';
-@import './login';
+@import "./home";
+@import "./slider";
+@import "./extend";
+@import "./variable";
+@import "./navbar";
+@import "./event";
+@import "./tab";
+@import "./resort";
+@import "./login";
+@import "./table";
+@import "./faq";
 
-
-*{
-    padding: 0;
-    margin: 0;
-  
+* {
+  padding: 0;
+  margin: 0;
 }
+
 .container {
-    max-width: 1568px;
-    padding: 0 16px;
-    margin-left: auto;
-    margin-right: auto;
+  max-width: 1568px;
+  padding: 0 16px;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.about {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: auto;
+  background-color: purple;
+
+  button {
+    display: block;
+  }
+}
+
+.view-more {
+  width: 100%;
+  height: 100vh;
+  background-color: gray;
+  color: wheat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sub-content {
+  width: 100%;
+  height: 500px;
+  border: 1px solid grey;
+}
+
+input[type="radio"] {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: url(../assets/icons/circle.svg) no-repeat center center;
+  background-color: grey;
+  border: 1px solid grey;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+  transition: 0.3s;
+
+  &:checked {
+    background-color: black;
+    border: 1px solid black;
+  }
+}
+
+.radio-group {
+  display: flex;
+  gap: 24px 16px;
+  flex-wrap: wrap;
+
+  .radio {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    cursor: pointer;
+
+    input[type="radio"] {
+      position: absolute;
+      opacity: 0;
+      display: none;
+    }
+
+    .radio-custom {
+      width: 16px;
+      height: 16px;
+      border: 1px solid #e0e0e0;
+      border-radius: 50%;
+      position: relative;
+      transition: all 0.5s ease;
+
+      &::after {
+        display: block;
+        width: 8px;
+        height: 8px;
+        background-color: #e0e0e0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transition: all 0.5s ease;
+        content: " ";
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    input[type="radio"]:checked + .radio-custom {
+      // transition: all 1s ease ;
+      border: 1px solid black;
+
+      &::after {
+        background-color: black;
+      }
+    }
+  }
+}
+.date-container {
+    position: relative;
+    width: 500px;
+    border: 1px solid;
+   
+  }
+  
+  .custom-datepicker {
+    position: relative;
+    appearance: none;
+    background-color: transparent;
+    padding-right: 20px;
+    border: none;
+    outline: none;
+    width: 100%;
+    position: relative;
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      appearance: none;
+      margin: 0;
+    }
+    &::after{
+        position: absolute;
+        content: " ";
+        background: url(../assets/icons/investigation-calendar.svg) no-repeat;
+        width: 100%;
+        height: 100%;
+        top: 16px;
+        right: 16px;
+    }
+    
+  }
+  
+  .calendar-image-label {
+    position: absolute;
+    top: 50%;
+    right: 5px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  
+  .calendar-image {
+    width: 20px;
+    height: 20px;
+  }
+  
+  .custom-date-picker {
+    position: relative;
+    
+    input[type="text"] {
+      appearance: none;
+      background-color: transparent;
+      border: 1px solid #ccc;
+      padding: 8px;
+      font-size: 14px;
+      width: 200px;
+      cursor: pointer;
+    }
+    
+    button {
+      appearance: none;
+      background-color: #ccc;
+      border: none;
+      padding: 8px 12px;
+      font-size: 14px;
+      color: #fff;
+      cursor: pointer;
+    }
+    
+    .date-picker {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      padding: 12px;
+      z-index: 999;
+      
+      // Calendar styles
+      // ...
+    }
+  }
+
+  .datepicker-toggle {
+    display: inline-block;
+    position: absolute;
+    right: 16px;
+    top: 16px;
+    width: 18px;
+    height: 19px;
+  }
+  .datepicker-toggle-button {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../assets/icons/investigation-calendar.svg');
+  }
+  .datepicker-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+.datepicker-input::-webkit-calendar-picker-indicator {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+}
+  
