--- a/src/style/_event.scss
+++ b/src/style/_event.scss
@@ -1,6 +1,7 @@
 .event-sec {
     margin-top: 60px;
     padding-bottom: 110px;
+
     .container {
         max-width: 1568px;
         padding: 0 16px;
@@ -92,28 +93,35 @@
                         position: absolute;
                         right: 17px;
                         bottom: 17px;
-                     
-                    }  .active{
+
+                    }
+
+                    .active {
                         background-color: red;
                     }
-                    
+
                 }
+
                 .event-text {
                     margin-top: 40px;
-                     h3 {
-                        
+
+                    h3 {
+
                         margin-bottom: 10px;
-                        a{
+
+                        a {
                             text-decoration: none;
                             font-size: 24px;
-                        color: #333333;
+                            color: #333333;
                         }
                     }
-                   p {
+
+                    p {
                         font-size: 16px;
                         margin-bottom: 10px;
                         line-height: 130%;
                     }
+
                     h5 {
                         font-size: 16px;
                         color: #A4A4A4;
@@ -121,18 +129,21 @@
                         font-weight: 400;
                     }
                 }
-                .outer-price{
+
+                .outer-price {
                     margin: 28px 0 0;
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    h2{
+
+                    h2 {
                         margin: 0;
                         line-height: 29px;
                         font-size: 22px;
                         color: #2B3D66;
                         font-weight: 600;
                     }
+
                     .btn.outline {
                         font-size: 16px;
                         padding: 6px 35px;
@@ -142,8 +153,229 @@
                         line-height: 19px;
                     }
                 }
-                }
-            
+            }
+
         }
+    }
+}
+
+.mobile-coupon-slide-top {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin: 0 auto;
+
+    .slide-img-grp {
+        display: flex;
+        gap: 32px;
+        width: 100%;
+        justify-content: flex-start;
+        margin: 0 10px;
+
+
+        .slide-img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100px;
+            height: 100px;
+            background: #FFFFFF;
+            border: 1px solid #e0e0e0;
+            border-radius: 10000px;
+
+            @media (max-width: 768px) {
+                width: 90px;
+                height: 90px;
+            }
+        }
+    }
+
+    button {
+        width: 32px;
+        height: 32px;
+
+        svg {
+
+            margin: auto;
+        }
+
+    }
+
+    .next-button {
+        svg {
+            transform: rotate(180deg);
+        }
+    }
+
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     top: 50%;
+    //     left: 0;
+    //     background: url(../icons/mobile-coupon-top-slide-prev.svg);
+    //     transform: translateY(-50%);
+    //     width: 9px;
+    //     height: 19px;
+    //     font-size: 20px;
+    //     text-align: center;
+    //     line-height: 30px;
+    //     cursor: pointer;
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    // }
+
+    // &::after {
+    //     content: "";
+    //     position: absolute;
+    //     top: 50%;
+    //     right: 0;
+    //     background: url(../icons/mobile-coupon-top-slide-prev.svg);
+    //     transform: rotate(180deg);
+    //     width: 9px;
+    //     height: 19px;
+    //     font-size: 20px;
+    //     text-align: center;
+    //     line-height: 30px;
+    //     cursor: pointer;
+    //     background-repeat: no-repeat;
+    //     background-position: center;
+    // }
+
+
+}
+
+.slide-img-grp {
+    display: flex;
+    gap: 32px;
+    width: 100%;
+    justify-content: flex-start;
+    margin: 0 10px;
+
+
+    .slide-img {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100px;
+        height: 100px;
+        background: #FFFFFF;
+        border: 1px solid #e0e0e0;
+        border-radius: 10000px;
+
+        @media (max-width: 768px) {
+            width: 90px;
+            height: 90px;
+        }
+    }
+}
+
+// .slide-grp {
+//     display: flex;
+//     align-items: center;
+// .slide-image-grp{
+//     display: flex;
+//     width: 100%;
+//     gap: 46px;
+//     .swiper-slide {
+//         width: 100px !important;
+//         margin-right: 46px;
+
+//         .slide-img {
+//             display: flex;
+//             justify-content: center;
+//             align-items: center;
+//             width: 100px;
+//             height: 100px;
+//             background: #FFFFFF;
+//             border: 1px solid #e0e0e0;
+//             border-radius: 10000px;
+
+//             @media (max-width: 768px) {
+//                 width: 90px;
+//                 height: 90px;
+//             }
+//         }
+//     }}
+
+//     button {
+//         width: 32px;
+//         height: 32px;
+
+//         svg {
+
+//             margin: auto;
+//         }
+
+//     }
+
+//     .next-button {
+//         svg {
+//             transform: rotate(180deg);
+//         }
+//     }
+// }
+
+
+.slide-grp {
+    display: flex;
+    align-items: center;
+    .slide-image-grp {
+        width: 100%;
+        max-width: 1116px;
+        margin: 0 22px;
+        .swiper-slide{
+            // margin: 0 !important;
+            // width: 145px !important;
+            
+        .slide-img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100px;
+            height: 100px;
+            background: #FFFFFF;
+            border: 1px solid #e0e0e0;
+            border-radius: 10000px;
+
+            @media (max-width: 768px) {
+                width: 90px;
+                height: 90px;
+            }
+        }}
+    }
+
+    button {
+        width: 32px;
+        height: 32px;
+
+        svg {
+
+            margin: auto;
+        }
+
+    }
+
+    .next-button {
+        svg {
+            transform: rotate(180deg);
+        }
+    }
+}
+
+.swiper-container {
+    width: 100%;
+}
+
+@media screen and (min-width: 640px) {
+    .swiper-container {
+        width: 640px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .swiper-container {
+        width: 768px;
     }
 }
