--- a/src/style/_navbar.scss
+++ b/src/style/_navbar.scss
@@ -46,6 +46,10 @@
                     text-decoration: none;
                     
                 }
+                // .active{
+                //     color:purple;
+                //     font-weight: 600;
+                // }
             }
         }
     }
@@ -57,4 +61,14 @@
     z-index: 100;
     background: rgba(51, 51, 51, 0.5);
 
+  }
+
+  .sub-nav{
+    width: 100%;
+    a{
+        font-size: 20px;
+        font-weight: 700;
+        text-decoration: none;
+        margin-left: 20px;
+    }
   }
